added pizzas url

--- a/MainPizza/templates/MainPizza/base.html
+++ b/MainPizza/templates/MainPizza/base.html
@@ -1,5 +1,8 @@
 <p>
     <a href = "{% url 'MainPizza:index' %}">pizzeria</a>
-    </p>
+    <a href="{% url 'MainPizza:pizzas' %}">Pizzas</a>
+</p>
     
-    {% block content %}{% endblock content %}
+    {% block content %}
+    
+    {% endblock content %}
