--- a/MainPizza/templates/MainPizza/index.html
+++ b/MainPizza/templates/MainPizza/index.html
@@ -1,3 +1,9 @@
+{% extends "MainPizza/base.html" %}
+
+{% block content %}
+
 <p>Pizzeria</p>
 
 <p>Pizzeria helps you keep track of pizza types and their toppings.</p>
+
+{% endblock content %}
