--- a/MainPizza/templates/MainPizza/new_comment.html
+++ b/MainPizza/templates/MainPizza/new_comment.html
@@ -4,15 +4,14 @@
 
 <p><a href="{% url 'MainPizza:pizza' pizza.id %}"> {{pizza}}<a/></p>
 
-<p>Add a new topping:</p>
-
-<form action="{% url 'MainPizza:new_topping' pizza.id %}" method = "post">
+<p>Add a new comment:</p>
+<form action="{% url 'MainPizza:new_comment' pizza.id %}" method = "post">
 
     {% csrf_token %}
 
     {{ form.as_p }}
 
-    <button name="submit">Add topping</button>
+    <button name="submit">Add a comment</button>
 </form>
 
 {% endblock content %}
