--- a/MainPizza/templates/MainPizza/pizza.html
+++ b/MainPizza/templates/MainPizza/pizza.html
@@ -1,33 +1,37 @@
-
 {% extends "MainPizza/base.html" %}
 
+{% block page_header %}
+    <h3>{{ pizza }}</h3>
+{% endblock page_header %}
+
 {% block content %}
-
-<p>Pizza: {{ pizza }}</p>
-
-<ul>
+<h4>Toppings</h4>
     {% for p in toppings %}
-    <li>
-        <p>{{ p.text |linebreaks}}</p>
+        <div class="card mb-1">
 
-    </li>
-    {% empty %}
-    <li> There are no toppings on this pizza yet.</li>
-    {% endfor %}
-</ul>
+        <div class="card-body">
+            {{ p.text }}
+        </div>
+    </div>
+{% empty %}
+    <p>There are no toppings for this pizza yet.</p>
+{% endfor %}
 
-<p>Comments:</p>
-<ul>
+<h4>Comments</h4>
+
     {% for c in comments %}
-    <li>
-        <p>{{ c.text }}</p>
-        <p>{{c.date_add |date:'M d, Y H:i'}}</p> 
-    </li>
-    {% empty %}
-    <li> There are no comments on this pizza yet.</li>
-    {% endfor %}
-</ul>
 
+        <div class="card mb-3">
+            <h7 class="card-header">
+            {{ c.date_add|date:'M d, Y H:i' }}
+        </h7>
+        <div class="card-body">
+            {{ c.text|linebreaks }}
+        </div>
+    </div>
+{% empty %}
+    <p>There are no comments for this pizza yet.</p>
+{% endfor %}
 <p>
     <a href="{% url 'MainPizza:new_comment' pizza.id %}">Add a new comment</a>
 </p>
