--- a/MainPizza/templates/MainPizza/index.html
+++ b/MainPizza/templates/MainPizza/index.html
@@ -1,6 +1,9 @@
 {% extends "MainPizza/base.html" %}
 
 {% block page_header %}
+<body>
+<img src="https://cdn.vox-cdn.com/thumbor/PzjACJuRDhwOwX-9Ad1vjUR3GCE=/110x0:1890x1335/1200x800/filters:focal(110x0:1890x1335)/cdn.vox-cdn.com/uploads/chorus_image/image/48870043/FINISHED_1_Pizzeria_Mozza_LA_Fennel_Sausage_Pizza.0.0.jpg" width=1110>
+</body>
     <div class="jumbotron">
         <hl class="display-3">Pizzas and their toppings</hl>
 
