--- a/MainPizza/templates/MainPizza/pizza.html
+++ b/MainPizza/templates/MainPizza/pizza.html
@@ -5,6 +5,9 @@
 {% endblock page_header %}
 
 {% block content %}
+<body>
+    <img src="https://cdn.foodism.co.uk/gallery/5c51835487f2a.jpeg" height=300 width=600>
+</body>
 <h4>Toppings</h4>
     {% for p in toppings %}
         <div class="card mb-1">
